[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
